# Mockup_up_data

./: - all scenarios in single file.txt  .gitignore  CMD.txt  MASTER_REFERENCE.md  PROBLEM_ANALYSIS_AND_SOLUTION.md  PROJECT_EXPLANATION.md  PROJECT_STRUCTURE.md  README.md  USAGE_GUIDE.md  add_fields.docx  consolidated_generator.py  create_project_report.py  demo_enhanced_system.py  generate_mock_output.py  generate_probability_outputs.py  generated_scenarios.json  master.json  pyproject.toml  requirements.txt  scenario_combinations_calculator.py  tabular_scenario_combinations_report_20250817_205944.txt  test_random_selection.py  user_input.json  visual_diagram.txt
docs/: # Basic_scenario generation.txt  Mockup_Data_Generation_System_Project_Report_20250816_181213.docx  generating_output_commands.docx  ~$ckup_Data_Generation_Commands_Reference.docx  ~$nerating_output_commands.docx  ~WRL0003.tmp
generated_outputs/: Model_1_exclusion_20250817_211928_000001Z.json  Model_1_exclusion_20250817_212305_000001Z.json  Model_1_exclusion_20250817_212305_000002Z.json  Model_1_exclusion_20250817_212707_000001Z.json  Model_1_exclusion_20250817_212707_000002Z.json  Model_1_negative_20250817_211922_000001Z.json  Model_1_negative_20250817_212300_000001Z.json  Model_1_negative_20250817_212300_000002Z.json  Model_1_negative_20250817_212703_000001Z.json  Model_1_negative_20250817_212703_000002Z.json  Model_1_negative_20250817_212722_000001Z.json  Model_1_negative_20250817_212722_000002Z.json  Model_1_negative_20250817_212927_000001Z.json  Model_1_negative_20250817_212927_000002Z.json  (+40 more)
(+13 files in other folders)
