[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mockgen"
version = "0.1.0"
description = "Simple mock data generator from JSON-defined sections"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "Vishnu" }]
dependencies = []

[project.scripts]
mockgen = "mockgen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


